2006-06-25  Hans Breuer  <hans@breuer.org>

	* app/display.c : avoid to call gettext on parameters for ngettext()
	Should finally really fix bug #344896
	
	* data/ui/display-ui.xml data/ui/popup-ui.xml data/ui/toolbox-ui.xml :
	removed expand="yes" because otherwise the files can't be read with
	gtk+-2.6.x which follows Dia can't start. Fixes bug #344895
	* app/menus.c app/Makefile.am : also find the ui files when run from
	app/run_dia.sh

2006-06-17  Gintautas Miliauskas  <gintas@akl.lt>

	* configure.in: Added lt to ALL_LINGUAS.

2006-06-15  Hans Breuer  <hans@breuer.org>

	* app/display.c : use ngettext() for possible plural variations.
	(Bug #344896, tokul@users.sourceforge.net)

	* objects/UML/class.c : use g_list_append() rather than prepend
	when copying attributes, operations, formalparams. Fixes bug #342902
	Also removed some superfluous outcommented code and fixed a warning.

	* objects/UML/class.c : dont break reading comment_line_length
	by misguide compatibility code. Fixes bug #341887

	* plug-ins/vdx/vdx-xml.c : added file missing from 0.3 
	version commit. Fixes bug #344804
	
	* lib/create.h : add create_standard_group() prototype
	* lib/libdia.def lib/makefile.msc objects/makefile.msc 
	  plug-ins/makefile.msc : added missing (files|exports)

2006-06-13  Lars Clausen  <lars@raeder.dk>

	* plug-ins/vdx/*: Version 0.3 of Visio import filters, thanks
	again to Ian Redfern.

2006-06-12  Elijah Newren  <newren gmail com>

	* autogen.sh: Run configure by default, allow it to be skipped if
	NOCONFIGURE is set in the environment.  #344574.

2006-06-12  Elijah Newren  <newren gmail com>

	Pair of build fixes.  #344357

	* Makefile.am: avoid cp errors when $(srcdir) == .

	* objects/Misc/newgroup.c: include pixmaps/newgroup.xpm instead of
	pixmaps/group.xpm as the latter doesn't exist.

2006-06-12  Hans Breuer  <hans@breuer.org>

	* plug-ins/python/codegen.py : applied patch from Thomas D Ahle
	which adds support for Java and inheritance. Closes bug #344187